--- a/user/templates/login.html
+++ b/user/templates/login.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<form method="post" action="/note/login">
+<form method="post" action="/user/login">
     {% csrf_token %}
 
     <div>
