--- a/note/templates/list.html
+++ b/note/templates/list.html
@@ -9,7 +9,7 @@
 <div>
     我的Notes
     <a href="/note/add">新增note</a>
-    <a href="/note/">返回首页</a>
+    <a href="/">返回首页</a>
 </div>
 
 <table>
@@ -20,15 +20,17 @@
             <th>创建时间</th>
             <th>创建人</th>
             <th>修改时间</th>
+            <th>操作</th>
         </tr>
 
         {% for note in notes %}
             <tr>
                 <td>{{ note.title }}</td>
-                <td>{{ note.content }}</td>
+                <td>{{ note.content }</td>
                 <td>{{ note.create_time }}</td>
                 <td>{{ note.user.username }}</td>
                 <td>{{ note.mod_time }}</td>
+                <td><a href="/note/mod/{{ note.id }}">修改</a><a href="/note/del/{{ note.id }}">删除</a></td>
             </tr>
         {% endfor %}
     </tbody>
